Changes to adapt encoded  special symbols in path
Encoding steps from UrlUtils are removed
Test is altered to check new changes
android.net.Uri in place of java.net.URI to form the URL